syntax = "proto3";
package services;
import "Models.proto";

message UserScoreRequest{
  repeated UserInfo users = 1;
}
message UserScoreResponse{
  repeated UserInfo users = 1;
}

service UserService{
  rpc GetUserScore(UserScoreRequest)returns (UserScoreResponse);
  //服务端流式传输
  rpc GetUserScoreByServerStream(UserScoreRequest)returns (stream UserScoreResponse);
  //客户端流式传输
  rpc GetUserScoreByClientStream(stream UserScoreRequest)returns (UserScoreResponse);
  //双向流（获取客户积分)
  rpc GetUserScoreByTWS(stream UserScoreRequest)returns (stream UserScoreResponse);
}

