syntax = "proto3";

// 此处定义了生成的xxxx.pb.go中的package名字
package my;

// The import path must contain at least one forward slash ('/') character.
// 至少包含一个"/"
// 此处定义了文件夹的名字以及路径
option  go_package = "/my";

message UserInfo{
  int32 user_id = 1;
  int32 user_score = 2;
}

message UserScoreRequest{
  repeated UserInfo users = 1;
}
message UserScoreResponse{
  repeated UserInfo users = 1;
}

service MyRPCService{
  // 服务端stream模式
  rpc GetMyStream(UserScoreRequest)returns (stream UserScoreResponse){}
}